# unirt-sdk

./: .gitignore  LICENSE  NOTICE  README.md  jitpack.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/jni/: CMakeLists.txt  unirt_jni.cpp
android/kotlin/ai/unirt/: LlmSession.kt  Native.kt  UniRT.kt  VlmSession.kt
android/kotlin/ai/unirt/internal/: NativeLlmSession.kt  NativeVlmSession.kt
android/test/ai/unirt/: LlmSessionTest.kt  VlmSessionTest.kt
examples/: chat.html
examples/android/UniRTChatExample/: README.md  settings.gradle.kts
examples/android/UniRTChatExample/app/: build.gradle.kts
examples/android/UniRTChatExample/app/src/androidTest/kotlin/ai/unirt/example/chat/: ChatUiTest.kt
examples/android/UniRTChatExample/app/src/main/: AndroidManifest.xml
examples/android/UniRTChatExample/app/src/main/kotlin/ai/unirt/example/chat/: ChatScreen.kt  ChatViewModel.kt  MainActivity.kt
examples/ios/UniRTChatExample/: README.md  project.yml
examples/ios/UniRTChatExample/UniRTChatExample/: ChatViewModel.swift  ContentView.swift  UniRTChatExampleApp.swift
examples/ios/UniRTChatExample/UniRTChatExampleUITests/: ChatUITests.swift
include/: unirt.h
ios/: Package.swift  README.md
ios/Sources/CUniRT/: module.modulemap  plugin_entrypoints.h  unirt.h
ios/Sources/UniRTKit/: ChatMessage.swift  LlmSession.swift  UniRT.swift  UniRTError.swift  VlmSession.swift
ios/Tests/UniRTKitTests/: InferenceSmokeTests.swift  VlmLinkSmokeTests.swift
python/: .gitignore  README.md  build_wheel.py  pyproject.toml  setup.py  smoke_installed_wheel.py
python/unirt/: __init__.py  _progress.py  _version.py  auto.py  cli.py  model_manager.py  modeling.py  server.py  tokenizer.py
python/unirt/_ffi/: __init__.py  _api.py  _lib.py  _types.py
python/unirt/generation/: __init__.py  config.py  output.py  streamer.py
scripts/: jitpack-install.sh
