[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "unirt"
dynamic = ["version"]
description = "Python binding for UniRT — multi-backend on-device LLM inference with an extensible VLM API"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Peter Huang" }]
keywords = ["llm", "inference", "on-device", "mlx", "llama.cpp", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.33,<2",
    "tokenizers>=0.21,<1",
    "tqdm>=4.66",
]

[project.scripts]
unirt = "unirt.cli:main"

[tool.setuptools.packages.find]
include = ["unirt*"]

[tool.setuptools.dynamic]
version = { attr = "unirt._version.__version__" }
